added more design manual stuff

--- a/designManual/designManual.tex
+++ b/designManual/designManual.tex
@@ -29,7 +29,7 @@
 	basicstyle=\footnotesize,
 	breakatwhitespace=false,		 
 	breaklines=true,				 
-	captionpos=b,					
+	captionpos=t,					
 	keepspaces=true,				 
 	showspaces=false,				
 	showstringspaces=false,
@@ -39,13 +39,14 @@
  
 \lstset{style=mystyle}
 
-\title{COMP2121 Project - Design Manual}
+\title{\vspace{2cm}COMP2121 Project - Design Manual}
 \author{Kevin Zihong Ni \& Phoebe Zhou\\\small\texttt{z5025098 z5088051}}
 
 \begin{document}
 
 \newgeometry{margin=1.5in}
 \maketitle
+\vspace{2cm}
 \tableofcontents
 \pagebreak
 \restoregeometry
