--- a/designManual/designManual.tex
+++ b/designManual/designManual.tex
@@ -218,6 +218,7 @@ void findPot() {
 
 \section{Module Specification}
 
-
+\subsection{Initialisation}
+This module of the code is jumped to from the RESET vector. It resets all of the general purpose and I/O registers 
 
 \end{document}
