--- a/designManual/designManual.tex
+++ b/designManual/designManual.tex
@@ -38,7 +38,7 @@
 	showtabs=false,				  
 	tabsize=4
 }
- 
+
 \lstset{style=mystyle}
 
 \title{\vspace{2cm}COMP2121 Project - Design Manual}
@@ -55,73 +55,73 @@
 
 \section{System Flow Control} \label{sec:sfc}
 \begin{center}
-\begin{tikzpicture}[node distance=2.3cm]
+	\begin{tikzpicture}[node distance=2.3cm]
 
-	\node (start) [startstop] {START};
-	\node (init) [process, below of=start] {\verb|init()|};
-	\node (stcd) [process, below of=init] {\verb|startCountdown()|};
-	\node (seti) [process, below of=stcd] {$i := 3$};
-	\node (pot) [process, below of=seti] {\verb|findPot()|};
-	\node (find) [process, below of=pot] {\verb|findCode()|};
-	\node (dec) [process, below of=find] {$i--$};
-	\node (loop) [decision, below of=dec] {$3 \neq 0$};
-	\node (enter) [process, below of=loop] {\verb|enterCode()|};
-	\node (end) [startstop, below of=enter] {END};
+		\node (start) [startstop] {START};
+		\node (init) [process, below of=start] {\verb|init()|};
+		\node (stcd) [process, below of=init] {\verb|startCountdown()|};
+		\node (seti) [process, below of=stcd] {$i := 3$};
+		\node (pot) [process, below of=seti] {\verb|findPot()|};
+		\node (find) [process, below of=pot] {\verb|findCode()|};
+		\node (dec) [process, below of=find] {$i--$};
+		\node (loop) [decision, below of=dec] {$3 \neq 0$};
+		\node (enter) [process, below of=loop] {\verb|enterCode()|};
+		\node (end) [startstop, below of=enter] {END};
 
-	\draw [arrow] (start) -- (init);
-	\draw [arrow] (init) -- (stcd);
-	\draw [arrow] (stcd) -- (seti);
-	\draw [arrow] (seti) -- (pot);
-	\draw [arrow] (pot) -- (find);
-	\draw [arrow] (find) -- (dec);
-	\draw [arrow] (dec) -- (loop);
-	\draw [arrow] (loop) -- node[anchor=east] {False} (enter);
-	\draw [arrow] (loop) -- node[anchor=south] {True} +(4, 0) |- (pot);
-	\draw [arrow] (enter) -- (end);
+		\draw [arrow] (start) -- (init);
+		\draw [arrow] (init) -- (stcd);
+		\draw [arrow] (stcd) -- (seti);
+		\draw [arrow] (seti) -- (pot);
+		\draw [arrow] (pot) -- (find);
+		\draw [arrow] (find) -- (dec);
+		\draw [arrow] (dec) -- (loop);
+		\draw [arrow] (loop) -- node[anchor=east] {False} (enter);
+		\draw [arrow] (loop) -- node[anchor=south] {True} +(4, 0) |- (pot);
+		\draw [arrow] (enter) -- (end);
 
-\end{tikzpicture}
+	\end{tikzpicture}
 \end{center}
 
 \section{Data Structures Dictionary}
 
 \begin{table}[H]
-\centering
-%\caption{Data Structures Dictionary}
-\label{tbl:dict}
-\begin{tabular}{@{}lllp{9cm}@{}}
-\toprule
-Variable Name & Data Type        & Bytes & Description \\ \midrule
-\multicolumn{4}{l}{Global Variables} \\ \midrule
-fours         & unsigned integer & 1     & Count used by Timer 4 to calculate a second (each count represents 1/30th of a second) \\
-bounce        & unsigned integer & 1     & Counter used for debouncing PB1 \\
-seed          & unsigned integer & 2     & Seed used for random number generation \\
-roundsleft    & unsigned integer & 1     & How many rounds are left in the game \\
-at            & enumeration      & 1     & Which round the player is in \\
-ocount        & unsigned integer & 1     & Stores the number of seconds per potentiometer round \\
-RandNum		  & unsigned integer & 3	& Stores the three secret keys that the player must find\\
-win\_lose 	  & flag 			 & 1	 & Stores whether a keyboard button was pressed on the timeout or complete screen\\ \midrule
-\multicolumn{4}{l}{Potentiometer Variables} \\ \midrule
-wadc          & flag             & 1     & Stores whether or not the system is waiting on an ADC reading \\
-count         & unsigned integer & 1     & Stores the number of seconds left in the last pot round \\
-adcreading	& unsigned integer	& 2 & Stores the most recent ADC reading \\  
-potwin		& unsigned integer	& 2	& Counter to count 1 second to win the potentiometer round \\ 
-temp4:temp3	& unsigned integer	& 2	& Target potentiometer value for the current round \\ \midrule
-\multicolumn{4}{l}{Keyboard variables} \\ \midrule
-keyFlag 	 & flag				& 1 & Stores whether the button is pressed (for debouncing)\\
-keyFlag1	 & flag				& 1 & Stores whether button is pressed (for debouncing) \\ 
-keyFound	 & flag				& 1 & Stores whether the secret key matches the key pressed\\
-keyRandNum	 & unsigned integer & 1 & Stores the secret key for that particular round\\
-keyButton    & unsigned integer & 1 & Stores the key of the button pressed\\
-TempCounter  & unsigned integer & 1 & Counter for the player to hold the secret key for one second\\
-\midrule
-\multicolumn{4}{l}{Backlight variables} \\ \midrule
-pressed\_b	 & flag				& 1 & Stores whether the player has pressed any random key\\
-backlighton  & flag 			& 1 & Stores whether the lcd is on full brightness\\
-on\_off      & flag 			& 1 & Stores whether or not the backlight is fading in or out\\
-fiveSwait	 & unsigned integer & 1 & Counter to count for five seconds before the backlight is turned off\\
+	\centering
+	%\caption{Data Structures Dictionary}
+	\label{tbl:dict}
+	\begin{tabular}{@{}lllp{9cm}@{}}
+		\toprule
+		Variable Name & Data Type        & Bytes & Description \\ \midrule
+		\multicolumn{4}{l}{Global Variables} \\ \midrule
+		fours         & unsigned integer & 1     & Count used by Timer 4 to calculate a second (each count represents 1/30th of a second) \\
+		bounce        & unsigned integer & 1     & Counter used for debouncing PB1 \\
+		seed          & unsigned integer & 2     & Seed used for random number generation \\
+		roundsleft    & unsigned integer & 1     & How many rounds are left in the game \\
+		at            & enumeration      & 1     & Which round the player is in \\
+		ocount        & unsigned integer & 1     & Stores the number of seconds per potentiometer round \\
+		RandNum		  & unsigned integer & 3	& Stores the three secret keys that the player must find\\
+		win\_lose 	  & flag 			 & 1	 & Stores whether a keyboard button was pressed on the timeout or complete screen\\ \midrule
+		\multicolumn{4}{l}{Potentiometer Variables} \\ \midrule
+		wadc          & flag             & 1     & Stores whether or not the system is waiting on an ADC reading \\
+		count         & unsigned integer & 1     & Stores the number of seconds left in the last pot round \\
+		adcreading	& unsigned integer	& 2 & Stores the most recent ADC reading \\  
+		potwin		& unsigned integer	& 2	& Counter to count 1 second to win the potentiometer round \\ 
+		temp4:temp3	& unsigned integer	& 2	& Target potentiometer value for the current round \\ \midrule
+		\multicolumn{4}{l}{Keyboard variables} \\ \midrule
+		keyFlag 	 & flag				& 1 & Stores whether the button is pressed (for debouncing)\\
+		keyFlag1	 & flag				& 1 & Stores whether button is pressed (for debouncing) \\ 
+		keyFound	 & flag				& 1 & Stores whether the secret key matches the key pressed\\
+		keyRandNum	 & unsigned integer & 1 & Stores the secret key for that particular round\\
+		keyButton    & unsigned integer & 1 & Stores the key of the button pressed\\
+		TempCounter  & unsigned integer & 1 & Counter for the player to hold the secret key for one second\\
+		\midrule
+		\multicolumn{4}{l}{Backlight variables} \\ \midrule
+		pressed\_b	 & flag				& 1 & Stores whether the player has pressed any random key\\
+		backlighton  & flag 			& 1 & Stores whether the lcd is on full brightness\\
+		on\_off      & flag 			& 1 & Stores whether or not the backlight is fading in or out\\
+		fiveSwait	 & unsigned integer & 1 & Counter to count for five seconds before the backlight is turned off\\
 
-\bottomrule
-\end{tabular}
+		\bottomrule
+	\end{tabular}
 \end{table}
 
 \section{Algorithm Descriptions}
@@ -139,7 +139,7 @@ void startCountdown() {
 	do {
 		cdTimer--;
 		display(cdTimer);
-		
+
 		buzzerOn();
 		waitms(245);
 		buzzerOff();
@@ -250,7 +250,7 @@ void timerInterrupt5{
 			run motor;
 		}
 		else{
-		TempCounter++;
+			TempCounter++;
 		}
 	}
 }
@@ -260,69 +260,70 @@ void keyboard(){
 	int col_mask=0xEF;
 	int row_mask=1;
 	int num_col;
-	
+
 	while(num_col<=4){
 		PORTL=col_mask;
-		PINL=PINL.0xFF;
-		
+		PINL=PINL&0xFF;
+
 		if(PINL==0xFF){
 			num_col++;
-			
+
 			// left shift col_mask
 			col mask<<1;
 			continue;
 		}
 		else{
-		while(rol_mask!=0x10){
-		//andi PINL&row_mask
-		PINL=PINL.row_mask;
-		
-			if(PINL!=0){
-			// left shift row mask
-			row_mask<<1;
-			continue;
-			}
-		debounce();
-		break;
+			while(rol_mask!=0x10){
+				//andi PINL&row_mask
+				PINL=PINL&row_mask;
+
+				if(PINL!=0){
+					// left shift row mask
+					row_mask<<1;
+					continue;
+				}
+				debounce();
+				break;
 			}
 		}
 	}
 }
-	
+
 void debounce(){
 	while(PINL==0){
-	// if it is the same low, keep looping
-	PINL=PINL.rol_mask;
+		// if it is the same low, keep looping
+		PINL=PINL&rol_mask;
 	}
-	
+}
+
 void findCode(){
 
 	if(roundsleft== 3){
-		RandNum+2=low(seed). 0x0F;
-		
+		RandNum+2=low(seed)& 0x0F;
+
 		//right shift it four times
 		RandNum+1=4>>low(seed);
-		
+
 		//andi high(seed) with 0x0F to remove higher 4 bits
-		RandNum=high(seed). 0x0F;
-	
-	
-		}
-	
+		RandNum=high(seed)& 0x0F;
+
+
+	}
+
 	while(roundleft!=0){
-	//used to find the correct secret key for that stage
+		//used to find the correct secret key for that stage
 		keyRandNum=RandNum;
 		RandNum++;
 		roundleft--;
-		}
+	}
 	//initiate the timer interrupt
 	timerInterrupt5();
 
 	while (!keyFound){
 		keyboard();
-		}
 	}
-	
+}
+
 \end{lstlisting}
 
 \subsection{Algorithm for \texttt{enterCode}}
@@ -332,17 +333,17 @@ int keyFlag1;
 int keyRandNum=RandNum+2;
 
 void enter(){
-	
+
 	buzzeron();
 	while(roundsleft>0){
 		while(!keyFlag1){
-		//loop until keyboard is pressed
+			//loop until keyboard is pressed
 			keyboard();
 		}
 		keyFlag1=0;
-		
+
 		if(keyButton==RandNum){ 
-		//if button pressed is the correct secret key
+			//if button pressed is the correct secret key
 			printf("*");
 			keyRandNum--; // next Random number on the list
 			roundsleft--;
